# adventofcode

./: .gitignore  CMakeLists.txt
include/2023/day_1/: day_1_1.h  day_1_2.h
include/2023/day_2/: day_2_1.h  day_2_2.h
include/2023/day_3/: day_3_1.h  day_3_2.h
include/base/: day.h
src/: main.cpp
src/2023/day_1/: day_1_1.cpp  day_1_2.cpp
src/2023/day_2/: day_2_1.cpp  day_2_2.cpp
src/2023/day_3/: day_3_1.cpp  day_3_2.cpp
src/base/: day.cpp
src/resources/2023/: day_3_input.txt
